# distore

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
libdistore/: Cargo.toml  README.md
libdistore/src/: commands.rs  config.rs  gui.rs  lib.rs  parser.rs
src/: commands.rs  config.rs  main.rs
