[package]
name = "distore"
version = "0.1.1"
description = "Utility to use Discord as cloud storage"
authors = ["Deniz Demir <darkenedMellow@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/obvMellow/distore"
repository = "https://github.com/obvMellow/distore"
keywords = ["cli", "discord", "cloud", "storage"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
libdistore = { path = "./libdistore" }
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
anyhow = "1.0.86"
