[package]
name = "libdistore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
colog = "1.3.0"
colored = "2.1.0"
dirs = "5.0.1"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
lazy_static = "1.5.0"
log = "0.4.22"
rust-ini = "0.21.1"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
