[package]
name = "libdistore"
version = "0.2.1"
description = "Library for Distore"
authors = ["Deniz Demir <darkenedMellow@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/obvMellow/distore"
repository = "https://github.com/obvMellow/distore"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
colog = "1.3.0"
colored = "2.1.0"
dirs = "5.0.1"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
lazy_static = "1.5.0"
log = "0.4.22"
rust-ini = "0.21.1"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
thiserror = "1.0.63"
semver = "1.0.23"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
futures = "0.3.30"
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_14"] }
async-std = "1.13.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
